Improve DanglingLine pairing logic to handle ambiguity and update related tests
Signed-off-by: Leclerc Clement <clement.leclerc@rte-france.com>